# python_package_demo

./: pyproject.toml
doc/source/: conf.py  index.rst
package_demo/: package_demo.py
tests/: test_package_demo.py
