[tool.poetry]
name = "package-demo"
version = "0.1.0"
description = ""
authors = ["biranjan <biranjan.raut@spectralengines.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pdoc = "^0.3.2"
bokeh = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
